--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".CrimePageActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:parentActivityName=".CrimeListActivity">
         </activity>
         <activity android:name=".CrimeListActivity">
 
