--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.criminalintent" >
-
 
     <application
         android:allowBackup="true"
@@ -13,11 +12,11 @@
             android:label="@string/app_name"
             android:parentActivityName=".CrimeListActivity">
         </activity>
-        <activity android:name=".CrimeListActivity">
+        <activity
+            android:name=".CrimeListActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
